replace uio logo with new version

--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
 						<div class="logo"></div>
 
 						<div>
-							<div class="coll_logo"><img src="lib/norment/other/UiO_white.svg"></div>
+							<div class="coll_logo" style="width: 12.5%;"><img src="lib/norment/other/uio_full_logo_eng_neg.svg"></div>
 							<div class="coll_logo" style="width: 15%;"><img src="lib/norment/other/OUS_logo_HVIT_eng.png"></div>
 							<div class="coll_logo"><img src="lib/norment/other/UiBlogo_Eng_white_left.svg"></div>
 							<div class="coll_logo"><img src="lib/norment/other/Haukeland_white.svg"></div>
