fix large image rendering

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 							</div>
 
 							<figure class="large-image">
-								<img src="https://unsplash.com/photos/lE5-z4nTCTQ/download?force=true&w=1920" class="large-image">
+								<img src="https://unsplash.com/photos/lE5-z4nTCTQ/download?force=true&w=1920" style="width: 80%;">
 							</figure>
 
 						</div>
@@ -252,7 +252,7 @@
 							</div>
 
 							<figure class="large-image">
-								<img src="https://unsplash.com/photos/lE5-z4nTCTQ/download?force=true&w=1920" class="large-image">
+								<img src="https://unsplash.com/photos/lE5-z4nTCTQ/download?force=true&w=1920" style="width: 80%">
 							</figure>
 
 						</div>
