add pointer plugin

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 		<link rel="stylesheet" href="dist/reveal.css">
 		<link rel="stylesheet" href="css/norment.css">
 
+		<!-- Plugins -->
+		<link rel="stylesheet" href="plugin/pointer/pointer.css" />
+
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/atom-one-dark.css">
 
@@ -490,6 +493,7 @@ data %>%
 		<script src="plugin/notes/notes.js"></script>
 		<script src="plugin/markdown/markdown.js"></script>
 		<script src="plugin/highlight/highlight.js"></script>
+		<script src="plugin/pointer/pointer.js"></script>
 
 		<!-- REVEAL.JS SETTINGS -->
 		<script src="lib/js/head.min.js"></script>
