update to submodule structure

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
 		<title>Sample for alternative NORMENT presentation theme</title>
 
-		<link rel="stylesheet" href="dist/reset.css">
-		<link rel="stylesheet" href="dist/reveal.css">
+		<link rel="stylesheet" href="reveal.js/dist/reset.css">
+		<link rel="stylesheet" href="reveal.js/dist/reveal.css">
 		<link rel="stylesheet" href="css/norment.css">
 
 		<!-- Plugins -->
@@ -490,14 +490,14 @@ data %>%
 		</div>
 
 		<!-- PLUGINS -->
-		<script src="plugin/notes/notes.js"></script>
-		<script src="plugin/markdown/markdown.js"></script>
-		<script src="plugin/highlight/highlight.js"></script>
+		<script src="reveal.js/plugin/notes/notes.js"></script>
+		<script src="reveal.js/plugin/markdown/markdown.js"></script>
+		<script src="reveal.js/plugin/highlight/highlight.js"></script>
 		<script src="plugin/pointer/pointer.js"></script>
 
 		<!-- REVEAL.JS SETTINGS -->
 		<script src="lib/js/head.min.js"></script>
-		<script src="dist/reveal.js"></script>
+		<script src="reveal.js/dist/reveal.js"></script>
 		<script src="dist/reveal-init.js"></script>
 	</body>
 </html>
